@@ -39,6 +39,10 @@ debian-installer (20150428) UNRELEASED; urgency=medium
       Quad), instead of just the Quad one.
     - PandaBoard: use u-boot.img instead of u-boot.bin
 
+  [ Ian Campbell ]
+  * Adjust build to handle DTBs in subdirectories, currently the case on arm64
+    (Closes: #786882).
+
  -- Didier Raboud <odyx@debian.org>  Sun, 29 Mar 2015 17:43:38 +0200
 
 debian-installer (20150422) unstable; urgency=medium
